# SherphyEngine

./: .gitignore  CMakeLists.txt  DeviceProc.h  README.md  a.cpp  build_windows.bat  generate.bat  vk.drawio  未命名绘图.drawio
MiracleRuntime/: CMakeLists.txt
MiracleRuntime/Application/: GameEngine.cpp  GameEngine.h  main.cpp
MiracleRuntime/JadeBreaker/Display/: GLFWDisplay.cpp  GLFWDisplay.h
MiracleRuntime/JadeBreaker/RHI/: RenderingMath.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInitializer.h  VulkanRHI.cpp  VulkanRHI.h  rendering_math.h  shader_resource_manger.h  vulkan_rhi.cpp  vulkan_rhi.h
MiracleRuntime/JadeBreaker/RayTracing/: vkRaytracing.cpp  vkRaytracing.h
MiracleRuntime/JadeBreaker/Shader/: glslc.h
MiracleRuntime/Resource/: FileSystem.cpp  FileSystem.h  SceneLoader.cpp  SceneLoader.h
MiracleRuntime/Soul/: Component.h  LogMessager.cpp  LogMessager.h  LogMessagerImpl.cpp  LogMessagerImpl.h  LogMessagerManager.cpp  LogMessagerManager.h  Object.h  RingBuffer.h  SimpleSystem.h  macro.h
MiracleRuntime/Soul/Allocator/: SherphyAllocator.h  SherphyAllocatorCallBack.cpp  SherphyAllocatorCallBack.h
MiracleRuntime/Soul/Experiment/SherphyECS/: DataWareHouse.hpp  Entity.hpp
MiracleRuntime/Soul/GlobalContext/: GlobalContext.cpp  GlobalContext.h
MiracleRuntime/Soul/Math/: MathPack.h  Matrix.h  Quaternion.h  Vector.h  Vertex.h
MiracleRuntime/Soul/PreCompile/: SoulGlobal.h  namespaceSpecifier.h  predefinedMacro.h
MiracleRuntime/World/: Scene.cpp  Scene.h  WorldDataBase.cpp  WorldDataBase.h
SherphyEngineReference/physicalLightTransport/mitsuba/: .gitignore  config.py
SherphyEngineReference/physicalLightTransport/mitsuba/include/GL/: glew.h
SherphyEngineReference/physicalLightTransport/mitsuba/include/mitsuba/bidir/: vertex.h
SherphyEngineReference/physicalLightTransport/mitsuba/include/mitsuba/render/: bsdf.h  emitter.h  imageblock.h
SherphyEngineReference/physicalLightTransport/mitsuba/src/bsdfs/: SConscript  blendbsdf.cpp  bumpmap.cpp  normalmap.cpp  scratchedSurface.cpp
SherphyEngineReference/physicalLightTransport/mitsuba/src/emitters/: spot.cpp
SherphyEngineReference/physicalLightTransport/mitsuba/src/integrators/bdpt/: bdpt_proc.cpp
SherphyEngineReference/physicalLightTransport/mitsuba/src/libbidir/: path.cpp  vertex.cpp
SherphyEngineReference/physicalLightTransport/mitsuba/src/libhw/: SConscript
SherphyEngineReference/physicalLightTransport/mitsuba/src/librender/: emitter.cpp
SherphyEngineReference/physicalLightTransport/mitsuba/src/textures/: bitmap.cpp
SherphyEngineReference/scenes/: my_first_render.exr
Sherphy_Lan/: CMakeLists.txt  lan_splash.cpp
Sherphy_Lan/Rendering/Raytracing/: Ray.h  RayTracing01.cpp  Vec3.cpp  Vec3.h
doc/DesignDoc/: 2022.3.29设计ECS系统.md  技术点分析文档.md
doc/DesignDoc/Sherphy_Engine/: namespace.md  编译若干问题的讨论.md
doc/DesignDoc/Sherphy_Engine/JadeBreaker/: VulkanEngine.md  dxci调研,.md
doc/DesignDoc/Sherphy_Paper/: ~$基于物理的全局光照引擎管线的.pptx  开题报告材料.DOCX  高云天任务书.doc  高云天开题报告.DOCX
doc/VulkanDoc/: vulkancore.md
doc/VulkanDoc/godot/: vulkan.md
doc/courseDoc/: 课程安排.md
doc/courseDoc/Foundations of Physically Based Modeling And Animation/: course_0.md
doc/courseDoc/cpp20/: runtime_error.md
resource/: CMakeLists.txt
resource/cmake/: compileShader.cmake
resource/public/SherphyShaderLib/: compileShader.cmd
resource/public/SherphyShaderLib/GLSL/Normal/: BlinnPhong.vert  SimpleTestTriangle.uniform
resource/scene/: CornellBox.json
sampleTest/simpleraytracer/: CMakeLists.txt  ScreenBuffer.cpp  ScreenBuffer.h  build_scripts.cmd  main.cpp
sampleTest/simpleraytracer/FileService/: PPMManger.cpp
sampleTest/vk/: test.cpp
sampleTest/vk/vktest/: vktest.sln  vktest.vcxproj  vktest.vcxproj.filters
sampleTest/vk/vktest/x64/Debug/: vc143.idb  vktest.exe.recipe  vktest.ilk  vktest.vcxproj.FileListAbsolute.txt
sampleTest/vk/vktest/x64/Debug/vktest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vktest.lastbuildstate
